Board Design Completed

--- a/index.html
+++ b/index.html
@@ -5,13 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/brain.js" defer></script>
     <script src="js/script.js" defer></script>
+
     <title>Ludo Game</title>
 </head>
 <body>
     <div class="main-container">
         <div class="board" id="board"></div>
-        <!-- <div class="inner-board"></div> -->
+        <div class="inner-board" id="inner-board">
+            <!-- <div><img width="100%" height="100%" src="assets/red.svg" alt=""></div>
+            <div><img width="100%" height="100%" src="assets/green.svg" alt=""></div>
+            <div><img width="100%" height="100%" src="assets/yellow.svg" alt=""></div> -->
+            <!-- Blue Tickets -->
+            <div class="board-cell-1x1" id="blue-ticket-1"><img src="assets/blue.svg" alt=""></div>
+            <div class="board-cell-1x1" id="blue-ticket-2"><img src="assets/blue.svg" alt=""></div>
+            <div class="board-cell-1x1" id="blue-ticket-3"><img src="assets/blue.svg" alt=""></div>
+            <div class="board-cell-1x1" id="blue-ticket-4"><img src="assets/blue.svg" alt=""></div>
+
+            <!-- Yellow Tickets -->
+            <div class="board-cell-1x1" id="yellow-ticket-1"><img src="assets/yellow.svg" alt=""></div>
+            <div class="board-cell-1x1" id="yellow-ticket-2"><img src="assets/yellow.svg" alt=""></div>
+            <div class="board-cell-1x1" id="yellow-ticket-3"><img src="assets/yellow.svg" alt=""></div>
+            <div class="board-cell-1x1" id="yellow-ticket-4"><img src="assets/yellow.svg" alt=""></div>
+
+            <!-- Red Tickets -->
+            <div class="board-cell-1x1" id="red-ticket-1"><img src="assets/red.svg" alt=""></div>
+            <div class="board-cell-1x1" id="red-ticket-2"><img src="assets/red.svg" alt=""></div>
+            <div class="board-cell-1x1" id="red-ticket-3"><img src="assets/red.svg" alt=""></div>
+            <div class="board-cell-1x1" id="red-ticket-4"><img src="assets/red.svg" alt=""></div>
+
+            <!-- Green Tickets -->
+            <div class="board-cell-1x1" id="green-ticket-1"><img src="assets/green.svg" alt=""></div>
+            <div class="board-cell-1x1" id="green-ticket-2"><img src="assets/green.svg" alt=""></div>
+            <div class="board-cell-1x1" id="green-ticket-3"><img src="assets/green.svg" alt=""></div>
+            <div class="board-cell-1x1" id="green-ticket-4"><img src="assets/green.svg" alt=""></div>
+
+        </div>
 
     </div>
     
