--- a/index.html
+++ b/index.html
@@ -12,34 +12,35 @@
 </head>
 <body>
     <div class="main-container">
+        <div class="dice" id="dice"></div>
         <div class="board" id="board"></div>
         <div class="inner-board" id="inner-board">
             <!-- <div><img width="100%" height="100%" src="assets/red.svg" alt=""></div>
             <div><img width="100%" height="100%" src="assets/green.svg" alt=""></div>
             <div><img width="100%" height="100%" src="assets/yellow.svg" alt=""></div> -->
             <!-- Blue Tickets -->
-            <div class="board-cell-1x1" id="blue-ticket-1"><img src="assets/blue.svg" alt=""></div>
-            <div class="board-cell-1x1" id="blue-ticket-2"><img src="assets/blue.svg" alt=""></div>
-            <div class="board-cell-1x1" id="blue-ticket-3"><img src="assets/blue.svg" alt=""></div>
-            <div class="board-cell-1x1" id="blue-ticket-4"><img src="assets/blue.svg" alt=""></div>
+            <div class="board-cell-1x1" id="blue-ticket-1"><img src="assets/B.svg" alt="B1"></div>
+            <div class="board-cell-1x1" id="blue-ticket-2"><img src="assets/B.svg" alt="B2"></div>
+            <div class="board-cell-1x1" id="blue-ticket-3"><img src="assets/B.svg" alt="B3"></div>
+            <div class="board-cell-1x1" id="blue-ticket-4"><img src="assets/B.svg" alt="B4"></div>
 
             <!-- Yellow Tickets -->
-            <div class="board-cell-1x1" id="yellow-ticket-1"><img src="assets/yellow.svg" alt=""></div>
-            <div class="board-cell-1x1" id="yellow-ticket-2"><img src="assets/yellow.svg" alt=""></div>
-            <div class="board-cell-1x1" id="yellow-ticket-3"><img src="assets/yellow.svg" alt=""></div>
-            <div class="board-cell-1x1" id="yellow-ticket-4"><img src="assets/yellow.svg" alt=""></div>
+            <div class="board-cell-1x1" id="yellow-ticket-1"><img src="assets/Y.svg" alt="Y1"></div>
+            <div class="board-cell-1x1" id="yellow-ticket-2"><img src="assets/Y.svg" alt="Y2"></div>
+            <div class="board-cell-1x1" id="yellow-ticket-3"><img src="assets/Y.svg" alt="Y3"></div>
+            <div class="board-cell-1x1" id="yellow-ticket-4"><img src="assets/Y.svg" alt="Y4"></div>
 
             <!-- Red Tickets -->
-            <div class="board-cell-1x1" id="red-ticket-1"><img src="assets/red.svg" alt=""></div>
-            <div class="board-cell-1x1" id="red-ticket-2"><img src="assets/red.svg" alt=""></div>
-            <div class="board-cell-1x1" id="red-ticket-3"><img src="assets/red.svg" alt=""></div>
-            <div class="board-cell-1x1" id="red-ticket-4"><img src="assets/red.svg" alt=""></div>
+            <div class="board-cell-1x1" id="red-ticket-1"><img src="assets/R.svg" alt="R1"></div>
+            <div class="board-cell-1x1" id="red-ticket-2"><img src="assets/R.svg" alt="R2"></div>
+            <div class="board-cell-1x1" id="red-ticket-3"><img src="assets/R.svg" alt="R3"></div>
+            <div class="board-cell-1x1" id="red-ticket-4"><img src="assets/R.svg" alt="R4"></div>
 
             <!-- Green Tickets -->
-            <div class="board-cell-1x1" id="green-ticket-1"><img src="assets/green.svg" alt=""></div>
-            <div class="board-cell-1x1" id="green-ticket-2"><img src="assets/green.svg" alt=""></div>
-            <div class="board-cell-1x1" id="green-ticket-3"><img src="assets/green.svg" alt=""></div>
-            <div class="board-cell-1x1" id="green-ticket-4"><img src="assets/green.svg" alt=""></div>
+            <div class="board-cell-1x1" id="green-ticket-1"><img src="assets/G.svg" alt="G1"></div>
+            <div class="board-cell-1x1" id="green-ticket-2"><img src="assets/G.svg" alt="G2"></div>
+            <div class="board-cell-1x1" id="green-ticket-3"><img src="assets/G.svg" alt="G3"></div>
+            <div class="board-cell-1x1" id="green-ticket-4"><img src="assets/G.svg" alt="G4"></div>
 
         </div>
 
